# a3data-kiro-poc

./: POWER.md  README.md  in_seguro_proposital.example
beta-ai/.kiro/steering/: react-basic-vite.md
beta-ai/power-bedrock-summary/steering/: resumo-simples.md
beta-ai/prompts/: power.md  simple-page.md
elfa/: README.md
elfa/.kiro/hooks/: security-vulnerability-scanner.kiro.hook
elfa/.kiro/steering/: fastapi.md  language-pt-br.md  nodejs.md
elfa/a3_fast_api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
elfa/a3_fast_api/app/: __init__.py  main.py
elfa/a3_fast_api/app/agents/: base.py  context.py
elfa/a3_fast_api/app/api/: health.py
elfa/a3_fast_api/app/core/: config.py  logging.py  middleware.py
elfa/a3_fast_api/app/ml/: models.py  pipeline.py
elfa/a3_fast_api/app/services/: llm.py
elfa/a3_fast_api/power-elfa-context/: POWER.md  power.json
elfa/a3_fast_api/power-elfa-context/steering/: examples.md  integration-guide.md
elfa/a3_fast_api/tests/: test_health.py
elfa/elfa_backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
elfa/elfa_backend/src/: server.js
elfa/elfa_backend/src/agents/: base.js
elfa/elfa_backend/src/api/: estoque.js  health.js
elfa/elfa_backend/src/config/: swagger.js
elfa/elfa_backend/src/core/: config.js  logger.js  middleware.js
elfa/elfa_backend/src/services/: llm.js
elfa/elfa_backend/tests/: health.test.js
power-bedrock-summary/: POWER.md
